--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 a:hover {
     background-color: #9e1de450;
     border-radius: 12px;
-    padding: 10px;    
+    padding: 10px;  
 }
 
 /* Corpo da  página */ 
@@ -73,8 +73,6 @@ a:hover {
     align-content: center;
     margin-left: 10%;
     align-content: center
-
-
 }
 
 .cont2 {
@@ -94,5 +92,49 @@ a:hover {
     font-size: 17px;
     color: rgba(128, 128, 128, 0.555);
     width: 100%;
+    min-width: 100%;
+    padding-bottom: 3%;
 }
 
+ .botao {
+    border: 2px solid var(--cor1);
+    background-color: #13131F;
+    padding: 10px 15px 10px 15px;
+    border-radius: 20px;
+    color: #f9f9f9;
+    font-family: var(--font-padrão);
+    font-size: 16px;
+    width: 20%;
+    min-width: 20%;
+    text-align: center;
+}
+
+ .botao:hover {
+    background-color: var(--cor1);
+    padding: 8px;
+    transition-duration: 0.2s;
+}
+
+.art2 {
+    width: 100%;
+    height: 50vh;
+}
+
+.art2 > h1, p {
+    text-align: center;
+    padding-top: 3%;
+}
+
+.art2 > h1 {
+    font-family: var(--font-destaque);
+    color: #f9f9f9;
+    font-size: 32px;
+}
+
+.art2 > p {
+    font-family: var(--font-padrão);
+    color:rgba(128, 128, 128, 0.555);
+    line-height: 2em;
+    margin-left: 20%;
+    margin-right: 20%;
+}
