--- a/style.css
+++ b/style.css
@@ -66,19 +66,18 @@ a:hover {
 .cont1, .cont2 {
     flex: 1;
     flex-basis: 0;
-
 }
 
 .cont1 {
     align-content: center;
     margin-left: 10%;
-    align-content: center
 }
 
 .cont2 {
-    background-color: blue;
     margin-right: 10%;
-    align-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .cont1 h1 {
@@ -115,14 +114,24 @@ a:hover {
     transition-duration: 0.2s;
 }
 
+.cont2 > .imgc {
+    width: 40%;
+    height: 60%;
+    background-image: linear-gradient(to top, #64158e, #8238a9, #b972df ) ;
+    border-radius: 50px 0px 20px 0px;
+}
+.imgc > img { 
+    width: 100%;
+    height: 100%;
+}
 .art2 {
     width: 100%;
     height: 50vh;
 }
 
+
 .art2 > h1, p {
     text-align: center;
-    padding-top: 3%;
 }
 
 .art2 > h1 {
@@ -135,6 +144,6 @@ a:hover {
     font-family: var(--font-padrão);
     color:rgba(128, 128, 128, 0.555);
     line-height: 2em;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
