--- a/style.css
+++ b/style.css
@@ -120,13 +120,24 @@ a:hover {
     background-image: linear-gradient(to top, #64158e, #8238a9, #b972df ) ;
     border-radius: 50px 0px 20px 0px;
 }
+
+.imgc:hover {
+    padding: 10px;
+    transition-duration: 0.1s;
+}
+
+img:hover {
+    width: 100%;
+    height: 100%;
+}
+
 .imgc > img { 
     width: 100%;
     height: 100%;
 }
 .art2 {
     width: 100%;
-    height: 50vh;
+    height: 45vh;
 }
 
 
@@ -134,10 +145,12 @@ a:hover {
     text-align: center;
 }
 
-.art2 > h1 {
+.destaque {
     font-family: var(--font-destaque);
     color: #f9f9f9;
     font-size: 32px;
+    padding-bottom: 10px;
+    text-align: center;
 }
 
 .art2 > p {
@@ -146,4 +159,43 @@ a:hover {
     line-height: 2em;
     margin-left: 30%;
     margin-right: 30%;
+    margin-top: 5%;
+}
+
+/*habilidades*/
+
+.hab {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 50vh;
+    align-items: center;
+}
+
+article {
+    width: 10%;
+    height: 50%;
+    background-color: #212121;
+    display: flex;
+    flex-direction: column;
+    text-align: center;  
+    justify-content: center; 
+    border-radius: 20px 0px 0px 0px;
+    border-bottom: 5px solid var(--cor1);
+    padding: 8px;
+}
+
+.icon p {
+    font-size: 16px;
+}
+
+.icon {
+    font-size: 90px;
+    color: var(--cor1);
+    padding: 10px;
+}
+
+article:hover {
+    padding: 20px;
+    transition-duration: 0.2s;
 }
