--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    text-decoration: none;
 }
 
 :root {
@@ -18,6 +19,7 @@
 body {
     background-color: var(--cor0);
     font-family: var(--font-padrão);
+    scroll-behavior: smooth;
 }
 
 /* cabeçalho */
@@ -27,7 +29,9 @@ header {
     justify-content:space-around; 
     border-bottom: 1px solid #9D1DE4;
     height: 8vh;
-    width: 100%;
+    width: 100%; 
+    position: fixed;   
+    background-color: var(--cor0);
 }
 
 .titulo {
@@ -43,13 +47,13 @@ header {
     margin-right: 10%;    
 }
 
-.menu a {
+.menu > a {
     text-decoration: none;
     color: #f9f9f9;
     padding: 10px;
 }
 
-a:hover {
+.menu > a:hover {
     background-color: #9e1de450;
     border-radius: 12px;
     padding: 10px;  
@@ -61,6 +65,8 @@ a:hover {
     display: flex;
     height: 50vh;
     flex-wrap: wrap;
+    padding-top: 8vh;
+    
 }
 
 .cont1, .cont2 {
@@ -166,7 +172,7 @@ img:hover {
 
 .hab {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
     height: 50vh;
     align-items: center;
@@ -199,3 +205,51 @@ article:hover {
     padding: 20px;
     transition-duration: 0.2s;
 }
+
+/* Footer aqui para baixo */
+
+footer {
+    width: 100%;
+    height: 60vh;
+    margin-top: 10%;
+}
+
+#contato {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    gap: 10%;
+    margin-top: 5%;
+}
+
+
+.cont {
+    text-align: center;    
+}
+
+.cont i {
+    font-size: 2em;
+    background-color: #212121;
+    border-radius: 40%;
+    padding: 16px;
+    color: var(--cor1);
+}
+
+.cont h2 {
+    font-size: 1.125em;
+    color: #f9f9f9;
+    padding: 2px;
+    padding-top: 10px;
+}
+
+.cont p {
+    font-size: 1em;
+    color:rgba(128, 128, 128, 0.555); 
+    padding: 2px;
+}
+
+.cont a {
+    padding: 0px;
+    margin: 0px;
+}
+
